# Ankify

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  BUSINESS_CONTEXT.md  README.md  docker-compose.yml  lint-staged.config.js  package-lock.json  package.json
.cursor/agents/: backend-dev.md  frontend-dev.md  product-lead.md
.cursor/commands/: backend.md  frontend.md  fullstack.md  product.md  standup.md
.cursor/memory/: backend.md  frontend.md  product.md  shared-context.md
.cursor/rules/: memory-protocol.mdc  team-culture.mdc
.github/workflows/: ci.yml  live-smoke.yml
adrs/: 0001-stream-pdf-rendering-to-bound-ai-server-memory.md  0002-self-healing-single-host.md  AGENTS.md
ai-server/: .env.example  pyproject.toml  start-ai.sh  test_pipeline.py
ai-server/app/: config.py  main.py  models.py
ai-server/app/routes/: generate.py
ai-server/app/services/: card_generator.py  deck_exporter.py  pdf_processor.py
ai-server/tests/: test_pdf_processor.py
backend/: .env.example  eslint.config.js  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: config.ts  index.ts
deploy/: ai-server.env.production  backend.env.production  deploy.sh  ec2-setup.sh  ecosystem.config.cjs  harden-host.sh
docs/: AGENT.md  NEXT_SESSION.md  TODO-ROADMAP.md
e2e/: global-setup.ts  package-lock.json  package.json  playwright.config.ts
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
knowledge/: INDEX.md
scripts/: init-localstack.sh
(+91 files in other folders)
